lots of stuff today, added entire Target adding handlers, added function call to create the table for targets in init.go, added SaveTarget into speakers.go, changed stuff in averaging-controller, changed stuff in equalizer-controller, omaha-app additions for Target, same with open-map-controller, target-selector includes a major overhall

--- a/software/src/omaha/templates/components/averaging-controller.html
+++ b/software/src/omaha/templates/components/averaging-controller.html
@@ -165,15 +165,9 @@
         var updatedAttributes = ["averaging"];
 
         // This is to deal with 0 since the averaging technically cannot be 0
-        if(this.effectiveness == 0 && this.comfort == 0) {
-          attributeValues = {
-            "averaging": 1
-          };
-        } else {
-          attributeValues = {
-            "averaging": this.effectiveness + this.comfort
-          };
-        }
+        attributeValues = {
+          "averaging": 10 - this.effectiveness + this.comfort
+        };
         this.$.selectModeAjax.body = {
           "updatedAttributes": updatedAttributes, 
           "attributeValues": attributeValues,                        
