--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -161,16 +161,16 @@
           }
 
           //Polymer.dom.flush() idk if we need this anymore
-          var listbox = document.getElementById("equalizerListbox");
-          console.log(Polymer.dom(listbox).children);
-          var motherPolymer = Polymer.dom(listbox).children; 
+          var equalizerListbox = document.getElementById("equalizerListbox");
+          console.log(Polymer.dom(equalizerListbox).children);
+          var motherPolymer = Polymer.dom(equalizerListbox).children; 
 
           // Remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
           if(motherPolymer.length > 1) {    // change that 2 to something that is not so fragile      // dont even need to check, think of the numerical analysis of checking
             for (var i = motherPolymer.length - 1; i > 1; i--)
-              Polymer.dom(listbox).removeChild(motherPolymer[i]);
-          
+              Polymer.dom(equalizerListbox).removeChild(motherPolymer[i]);
           }
+
           // Injecting the paper-items for the presets
           if(controller.speaker.PresetNames.length > 0) {
             for (i in controller.speaker.PresetNames) {
@@ -179,7 +179,29 @@
               temp.setAttribute("id", controller.speaker.PresetNames[i].valueOf().replace("\n", ""));
               // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
               temp.innerHTML = controller.speaker.PresetNames[i].valueOf().replace("\n", "");
-              Polymer.dom(listbox).appendChild(temp);
+              Polymer.dom(equalizerListbox).appendChild(temp);
+            }
+          }
+
+          //Polymer.dom.flush() idk if we need this anymore
+          var targetListbox = document.getElementById("targetListbox");
+          console.log(Polymer.dom(targetListbox).children);
+          motherPolymer = Polymer.dom(targetListbox).children; 
+
+          // Remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
+          if(motherPolymer.length > 1) {    // change that 2 to something that is not so fragile      // dont even need to check, think of the numerical analysis of checking
+            for (var i = motherPolymer.length - 1; i > 1; i--)
+              Polymer.dom(targetListbox).removeChild(motherPolymer[i]);
+          }
+
+          if(controller.speaker.TargetNames.length > 0) {
+            for (i in controller.speaker.TargetNames) {
+              temp = document.createElement("paper-item");
+              temp.setAttribute("value", controller.speaker.TargetNames[i].valueOf().replace("\n", ""));
+              temp.setAttribute("id", controller.speaker.TargetNames[i].valueOf().replace("\n", ""));
+              // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
+              temp.innerHTML = controller.speaker.TargetNames[i].valueOf().replace("\n", "");
+              Polymer.dom(targetListbox).appendChild(temp);
             }
           }
         }
