--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -149,7 +149,10 @@ paper-tabs paper-tab.iron-selected {
   /*
   color: #f6931f; 
   */
-  border: 0;
+  border: 1px;
+  border-style: solid;
+  border-color: #3f51b5;
+
   font-weight: bold; 
   font-size: calc(.018 * 100vw);
   /*width: calc(.028 * 100vw);*/
